--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "main": "shop.coffee",
   "dependencies": {
     "async": "^1.4.2",
+    "graceful-fs": "^4.1.2",
     "handlebars": "^3.0.3",
+    "mkdirp": "^0.5.1",
+    "node-uuid": "^1.4.3",
+    "request": "^2.61.0",
+    "transliteration": "^0.1.1",
     "underscore": "^1.8.3",
     "vakoo": "^0.0.7"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "supervisor -e coffee,hbs -- node_modules/vakoo/index.coffee start"
   },
   "repository": {
     "type": "git",
