--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "graceful-fs": "^4.1.2",
     "handlebars": "^3.0.3",
     "mkdirp": "^0.5.1",
+    "moment": "^2.10.6",
     "node-uuid": "^1.4.3",
     "request": "^2.61.0",
     "transliteration": "^0.1.1",
