--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "supervisor -e coffee,hbs -- node_modules/vakoo/index.coffee start"
+    "start": "supervisor -e coffee,hbs -- node_modules/vakoo/index.coffee start",
+    "pm2-stop": "pm2 stop luxy2 && pm2 delete luxy2 && pm2 stop luxy2_worker && pm2 delete luxy2_worker",
+    "pm2-start": "pm2 start config/pm2/stable.json && pm2 start config/pm2/worker_stable.json",
+    "pm2-restart": "npm run pm2-stop && npm run pm2-start"
   },
   "repository": {
     "type": "git",
