--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "async": "^1.4.2",
     "graceful-fs": "^4.1.2",
     "handlebars": "^3.0.3",
-    "mkdirp": "^0.5.1",
+    "mkdirp": "0.5.x",
     "moment": "^2.10.6",
     "node-uuid": "^1.4.3",
     "request": "^2.61.0",
