--- a/package.json
+++ b/package.json
@@ -16,10 +16,16 @@
     "vakoo": "0.0.x",
     "xml2js": "^0.4.12"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "coffee-script": "^1.10.0",
+    "coffeeify": "^1.1.0",
+    "gulp": "^3.9.0",
+    "gulp-coffeeify": "^0.1.8",
+    "gulp-replace-task": "^0.11.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "supervisor -e coffee,hbs -- node_modules/vakoo/index.coffee start",
+    "start": "supervisor -e coffee,hbs -i static/coffee -- node_modules/vakoo/index.coffee start",
     "pm2-stop": "pm2 stop luxy2 && pm2 delete luxy2 && pm2 stop luxy2_aggregator && pm2 delete luxy2_aggregator && pm2 stop luxy2_image_getter && pm2 delete luxy2_image_getter",
     "pm2-start": "pm2 start config/pm2/stable.json && pm2 start config/pm2/worker_stable.json",
     "pm2-restart": "npm run pm2-stop && npm run pm2-start",
