--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.10.6",
     "node-uuid": "^1.4.3",
     "request": "^2.61.0",
+    "robokassa": "0.0.3",
     "transliteration": "^0.1.1",
     "underscore": "^1.8.3",
     "vakoo": "0.0.x",
